force-app/main/default/objects/HDT_FiltriProcessiSelFornitura__mdt/HDT_FiltriProcessiSelFornitura__mdt.object-meta.xml
<CustomObject>
    <label>FiltriProcessiSelFornitura</label>
    
    <pluralLabel>FiltriProcessiSelFornitura</pluralLabel>
</CustomObject>