force-app/main/default/objects/HDT_FiltriProcessiSelFornitura__mdt/fields/ContrattiCliente__c.field-meta.xml
<CustomField>
    <fullName>ContrattiCliente__c</fullName>
    <label>Contratti Cliente</label>
    <length>2</length>
    <type>Text</type>
</CustomField>