force-app/main/default/objects/HDT_FiltriProcessiSelFornitura__mdt/fields/Disalimentabile__c.field-meta.xml
<CustomField>
    <fullName>Disalimentabile__c</fullName>
    <label>Disalimentabile</label>
    <length>2</length>
    <type>Text</type>
</CustomField>