force-app/main/default/objects/HDT_FiltriProcessiSelFornitura__mdt/fields/FornitureCliente__c.field-meta.xml
<CustomField>
    <fullName>FornitureCliente__c</fullName>
    <label>Forniture Cliente</label>
    <length>2</length>
    <type>Text</type>
</CustomField>