force-app/main/default/objects/HDT_FiltriProcessiSelFornitura__mdt/fields/RateCategory__c.field-meta.xml
<CustomField>
    <fullName>RateCategory__c</fullName>
    <label>Rate Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>