force-app/main/default/objects/HDT_FiltriProcessiSelFornitura__mdt/fields/StatoContratto__c.field-meta.xml
<CustomField>
    <fullName>StatoContratto__c</fullName>
    <label>Stato Contratto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>