force-app/main/default/objects/HDT_FiltriProcessiSelFornitura__mdt/fields/StatoFornitura__c.field-meta.xml
<CustomField>
    <fullName>StatoFornitura__c</fullName>
    <label>Stato Fornitura</label>
    <length>55</length>
    <type>Text</type>
</CustomField>