force-app/main/default/objects/HDT_FiltriProcessiSelFornitura__mdt/fields/TipoProcesso__c.field-meta.xml
<CustomField>
    <fullName>TipoProcesso__c</fullName>
    <label>Tipo Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>