force-app/main/default/objects/HDT_FiltriProcessiSelFornitura__mdt/fields/TipoServizio__c.field-meta.xml
<CustomField>
    <fullName>TipoServizio__c</fullName>
    <label>Tipo Servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>